<resources>
    <string name="app_name">Futebol</string>
    <string name="titulo">Brasileirão</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnAdd">Adicionar</string>
    <string name="edtNome">Nome Clube</string>
    <string name="edtLocal">Local Sede</string>
    <string name="edtTitulos">Titulos Nacionais</string>
    <string name="edtData">Data Fundação</string>
    <string name="btnGravar">Gravar</string>
    <string name="btnRemoverLista">Remover</string>
    <string name="btnRemover">Remover</string>
    <string name="btnMapToolbar">btnMapToolbar</string>
    <string name="title_activity_maps">Map</string>
    <string name="btnPagerToolbar">pager</string>
</resources>
