<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#FFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jpbrasil.futebol.FormEquipesActivity">

    <EditText
        android:id="@+id/edtNome"
        android:textColor="@color/colorPrimaryDark"
        android:hint="@string/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtLocal"
        android:textColor="@color/colorPrimaryDark"
        android:hint="@string/edtLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtTitulos"
        android:textColor="@color/colorPrimaryDark"
        android:hint="@string/edtTitulos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtData"
        android:textColor="@color/colorPrimaryDark"
        android:hint="@string/edtData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnGravar"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:background="#009900"
        android:text="@string/btnGravar" />

    <Button
        android:id="@+id/btnRemover"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:background="#FFCC00"
        android:text="@string/btnRemover" />




</LinearLayout>
